fixed spacing

--- a/src/style.css
+++ b/src/style.css
@@ -54,11 +54,6 @@ small {
   margin: 30px auto;
 }
 
-.author {
-  font-size: 12px;
-  text-decoration: none;
-}
-
 .icon {
   height: 60%;
   width: 60%;
